--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>gabru.code</title>
+    <title>gabru.tech | A collection of all the handy tips and gists for a developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="gandharv garg" />
 	<meta name="description" content="A collection of all the handy tips and gists for a developer" />
